[gd_scene load_steps=3 format=3 uid="uid://b1iychvxnuwc5"]

[ext_resource type="Script" uid="uid://gubt0sbkjc3w" path="res://leaderboard.gd" id="1_0uewc"]
[ext_resource type="Texture2D" uid="uid://b8ht6lawgr6v8" path="res://Assets/PNG/HUD/text_score.png" id="2_fjik7"]

[node name="Leaderboard" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0uewc")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_fjik7")
stretch_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Test: Number"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Test: Number"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Test: Number"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Test: Number"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Test: Number"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label6" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Test: Number"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label7" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Test: Number"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label8" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Test: Number"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label9" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Test: Number"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label10" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Test: Number"
horizontal_alignment = 1
vertical_alignment = 1
